crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_attrs__remove_attrs-4.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_attrs.rs
expression: "test_config(r#\"{ \"removeAttrs\": {\n            \"attrs\": [\"*:(stroke|fill):red\"]\n        } }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <circle fill=\"red\" stroke-width=\"6\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke=\"#000\" stroke-width=\"6\" stroke-dashoffset=\"5\" stroke-opacity=\"0\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle stroke=\"#000\" stroke-width=\"6\" stroke-dashoffset=\"5\" stroke-opacity=\"0\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle stroke=\"#FFF\" stroke-width=\"6\" stroke-dashoffset=\"5\" stroke-opacity=\"0\" cx=\"60\" cy=\"60\" r=\"25\"/>\n    <path fill=\"red\" stroke=\"red\" d=\"M100,200 300,400 H100 V300 C100,100 250,100 250,200 S400,300 400,200 Q400,50 600,300 T1000,300 z\"/>\n</svg>\"##))?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <circle stroke-width="6" stroke-dashoffset="5" cx="60" cy="60" r="50"/>
    <circle stroke="#000" stroke-width="6" stroke-dashoffset="5" stroke-opacity="0" cx="60" cy="60" r="50"/>
    <circle stroke="#000" stroke-width="6" stroke-dashoffset="5" stroke-opacity="0" cx="60" cy="60" r="50"/>
    <circle stroke="#fff" stroke-width="6" stroke-dashoffset="5" stroke-opacity="0" cx="60" cy="60" r="25"/>
    <path d="M100 200 300 400H100V300C100 100 250 100 250 200S400 300 400 200Q400 50 600 300T1000 300Z"/>
</svg>
